# permatracks_msg

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: AccelerationData.h  AccelerationDataRaw.h  Array.h  Box.h  Direction.h  DirectionVector.h  Distortion.h  GravityVector.h  GyroBiasVector.h  GyroData.h  GyroDataRaw.h  Magnet.h  MagneticFluxDensityData.h  MagneticFluxDensityDataRawAK09940A.h  MagneticFluxDensityDataRawLIS3MDL.h  MagneticFluxDensityDataRawMMC5983MA.h  MagneticFluxDensityIntegerData.h  Message.h  Pack.h  Position.h  RotationQuaternion.h
src/: AccelerationData.cpp  AccelerationDataRaw.cpp  Direction.cpp  DirectionVector.cpp  Distortion.cpp  GravityVector.cpp  GyroBiasVector.cpp  GyroData.cpp  GyroDataRaw.cpp  Magnet.cpp  MagneticFluxDensityData.cpp  MagneticFluxDensityDataRawAK09940A.cpp  MagneticFluxDensityDataRawLIS3MDL.cpp  MagneticFluxDensityDataRawMMC5983MA.cpp  MagneticFluxDensityIntegerData.cpp  Pack.cpp  Position.cpp  RotationQuaternion.cpp
test/: test_msg.cpp
